# prompt-injection-waf

./: Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_docker.py  test_env.py
openenv_prompt_injection_waf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: Dockerfile  __init__.py  app.py  prompt_injection_waf_environment.py  requirements.txt
static/: index.html
